--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"@supabase/supabase-js": "^2.52.1",
 		"@tailwindcss/vite": "^4.1.11",
+		"axios": "^1.11.0",
 		"body-parser": "^2.2.0",
 		"dotenv": "^17.2.1",
 		"express": "^5.1.0",
