--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
 		"@tailwindcss/vite": "^4.1.11",
 		"axios": "^1.11.0",
 		"body-parser": "^2.2.0",
+		"cors": "^2.8.5",
 		"dotenv": "^17.2.1",
 		"express": "^5.1.0",
 		"express-session": "^1.18.2",
+		"openai": "^5.19.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"tailwindcss": "^4.1.11"
+		"react-markdown": "^10.1.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.30.1",
+		"@tailwindcss/typography": "^0.5.16",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
 		"@vitejs/plugin-react": "^4.6.0",
@@ -35,6 +38,7 @@
 		"globals": "^16.3.0",
 		"prettier": "^3.6.2",
 		"prettier-plugin-tailwindcss": "^0.6.14",
+		"tailwindcss": "^4.1.13",
 		"vite": "^7.0.4"
 	}
 }
